--- a/src/js/templates/source.html
+++ b/src/js/templates/source.html
@@ -1,4 +1,5 @@
 <div class="overview">
+  <div class="avatar"></div>
   <div class="crumbs">
     <a href="#!/">World view</a>:
     <a href="#!/cities/<%= properties.city %>"><%= properties.city %></a>
