--- a/src/js/templates/sparkline.html
+++ b/src/js/templates/sparkline.html
@@ -5,7 +5,7 @@
     </div>
     <div class="pure-u-1-2">
       <h3 class="value">
-        <%= values[values.length -1] %>
+        <%= values[0].data[values[0].data.length -1] %>
         <span class="unit"><%= meta.units %></span>
       </h3>
     </div>
