--- a/src/js/templates/tools.html
+++ b/src/js/templates/tools.html
@@ -11,11 +11,12 @@
 
 <div class="toolbox time-tools">
   <h3>Time</h3>
-  <span class="button select-hourly" data-action="display:hourly">Hour</span>
-  <span class="button select-daily active" data-action="display:daily">Day</span>
-  <span class="button select-weekly" data-action="display:weekly">Week</span>
+  <span class="button select-hourly" data-action="hour">Hour</span>
+  <span class="button select-daily active" data-action="day">Day</span>
+  <span class="button select-weekly" data-action="week">Week</span>
 </div>
 
-<div class="toolbox last-updated-tools">
+<!-- <div class="toolbox last-updated-tools">
 Last updated: <span class="last-updated"></span>
 </div>
+ -->
