--- a/src/css/sass/base.scss
+++ b/src/css/sass/base.scss
@@ -28,11 +28,17 @@ h3 {
   font-size: 2rem;
 }
 
-p {
-  margin-bottom: 1em;
-}
+#main-region {
+  p,
+  li {
+    max-width: 600px;
+    margin-bottom: 1em;
+    line-height: 1.3;
+  }
 
-strong {
+  li {
+    max-width: 560px;
+  }
 }
 
 a,
