More highcharts integration

--- a/src/css/sass/components.scss
+++ b/src/css/sass/components.scss
@@ -124,6 +124,12 @@ footer {
         }
       }
 
+      .measure-graph {
+        width: 100%;
+        overflow: auto;
+      }
+
+      // Old chart stuff ==================================================
 
       .measure-graph {
         margin-top: $pad;
