--- a/src/css/sass/base.scss
+++ b/src/css/sass/base.scss
@@ -16,7 +16,7 @@ body {
 html, button, input, select, textarea,
 .pure-g [class *= "pure-u"] {
     /* Set your content font stack here: */
-    font-family: "Source Sans Pro", sans-serif;
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
 }
 
 h1, h2, h3, h4 {
@@ -108,6 +108,12 @@ a:active,
       background: #fff;
       color: $inactive-color;
       border: 0px none;
+    }
+
+    .leaflet-control-zoom-in:hover,
+    .leaflet-disabled.leaflet-control-zoom-in,
+    .leaflet-control-zoom-in {
+      border-right: 1px solid $body-color;
     }
   }
 
