Ugly solution for hiding/showing the map on route change

--- a/src/js/templates/cityData.html
+++ b/src/js/templates/cityData.html
@@ -1,16 +1,18 @@
+<div class="<%- _.camelCase(properties.name) %>">
+  <h2 class="action-toggle">
+    <span class="action action-minimize start-hidden">
+      <i class="fa fa-minus-square-o"></i>
+    </span>
+    <span class="action action-maximize">
+      <i class="fa fa-plus-square-o"></i>
+    </span>
+    <%= properties.name %>
+  </h2>
 
-<a name="<%- _.camelCase(properties.name) %>" class="<%- _.camelCase(properties.name) %>"></a>
-<h2>
-  <span class="action action-minimize">
-    <i class="fa fa-minus-square-o"></i>
-  </span>
-  <span class="action action-maximize start-hidden">
-    <i class="fa fa-plus-square-o"></i>
-  </span>
-  <%= properties.name %>
-</h2>
+  <div class="city-data start-hidden">
+    <a class="button" href="http://localdata-sensors-beta.herokuapp.com/api/v1/aggregations.csv?type=sources&op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=2015-01-20T00%3A00%3A00Z&before=2015-01-27T00%3A00%3A00Z&resolution=6h&over.city=<%= properties.name %>"><i class="fa fa-table"></i> CSV: Last week of data at 1 hour</a>
+    <a class="button" href="http://localdata-sensors-beta.herokuapp.com/api/v1/aggregations.csv?type=sources&op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=2015-01-20T00%3A00%3A00Z&before=2015-01-27T00%3A00%3A00Z&resolution=6h&over.city=<%= properties.name %>"><i class="fa fa-table"></i> CSV: Last month of data at 6 hours</a>
 
-<div class="city-data">
-<a class="button" href="http://localdata-sensors-beta.herokuapp.com/api/v1/aggregations.csv?type=sources&op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=2015-01-20T00%3A00%3A00Z&before=2015-01-27T00%3A00%3A00Z&resolution=6h&over.city=<%= properties.name %>"><i class="fa fa-table"></i> CSV: Last week of data at 1 hour</a>
-<a class="button" href="http://localdata-sensors-beta.herokuapp.com/api/v1/aggregations.csv?type=sources&op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=2015-01-20T00%3A00%3A00Z&before=2015-01-27T00%3A00%3A00Z&resolution=6h&over.city=<%= properties.name %>"><i class="fa fa-table"></i> CSV: Last month of data at 6 hours</a>
+    <div class="source-list"></div>
+  </div>
 </div>
