--- a/src/css/sass/components.scss
+++ b/src/css/sass/components.scss
@@ -227,13 +227,40 @@ footer {
     background: #fff;
   }
 
-  .source {
-    padding: $pad 0;
+  h2, h4 {
+    cursor: pointer;
+  }
 
-    h3 {
-      font-size: 1rem;
+  h2 {
+    font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+    font-weight: 400;
+  }
+
+  .source-list {
+  }
+
+  .source {
+    padding: $pad;
+    background: $background-light-color;
+
+    .api {
+      padding-top: $minipad;
+    }
+
+    h4 {
+      font-size: 1.5rem;
+      font-weight: 400;
     }
   }
+
+  .source:nth-child(odd) {
+    background: lighten($background-light-color, 5%);
+  }
+
 }
 
 .overview {
