--- a/src/js/templates/mapRegion.html
+++ b/src/js/templates/mapRegion.html
@@ -1,5 +1,3 @@
-<div class="pure-g">
-  <div class="pure-u-1">
-    <div id="map"></div>
-  </div>
+<div id="map-zone">
+  <div id="map"></div>
 </div>
