--- a/src/js/templates/city.html
+++ b/src/js/templates/city.html
@@ -3,7 +3,7 @@
     <a href="#!/">World view</a>
   </div>
   <h2><%= properties.name %></h2>
-  <a href="#!/data/cities/<%= properties.name %>">Get raw data</a>
+  <a href="#!/data/cities/<%= properties.name %>">GET RAW DATA</a>
 </div>
 
 <div id="tools-region"></div>
