--- a/src/js/templates/source.html
+++ b/src/js/templates/source.html
@@ -5,7 +5,7 @@
     <a href="#!/cities/<%= properties.city %>"><%= properties.city %></a>
   </div>
   <h2><%= properties.name %></h2>
-  <a href="#!/data/cities/<%= properties.city %>/sources/<%= properties.name %>">Get raw data</a>
+  <a href="#!/data/cities/<%= properties.city %>/sources/<%= properties.name %>">GET RAW DATA</a>
 </div>
 
 <div id="tools-region"></div>
