--- a/src/js/templates/tools.html
+++ b/src/js/templates/tools.html
@@ -10,7 +10,7 @@
  -->
 
 <div class="toolbox time-tools">
-  <h3>Time</h3>
+  <h3>View by:</h3>
   <span class="button select-hourly" data-action="hour">Hour</span>
   <span class="button select-daily active" data-action="day">Day</span>
   <span class="button select-weekly" data-action="week">Week</span>
