--- a/src/css/sass/toolbox.scss
+++ b/src/css/sass/toolbox.scss
@@ -10,22 +10,23 @@
 
     .toolbox {
       background: #fff;
-      padding: $minipad;
+      padding: 0 $pad;
       border-right: $pad solid $background-light-color;
       float: left;
+      font-size: 1rem;
 
       h3 {
-        font-size: 0.8em;
+        display: inline-block;
+        font-size: 1rem;
         font-weight: normal;
         color: $inactive-color;
-        padidng-bottom: $minipad;
       }
 
       .button {
         cursor: pointer;
         display: inline-block;
-        padding: 3px 5px;
-        border-radius: 3px;
+        padding: 0px 8px;
+        line-height: 40px;
         font-weight: bold;
         text-transform: uppercase;
         color: lighten($body-color, 30%);
@@ -44,8 +45,8 @@
       }
 
       .button:hover,
-      .button.active {
-        background: $background-light-color;
+      .button.active
+       {
         color: $body-color;
       }
     }
