--- a/src/js/templates/data.html
+++ b/src/js/templates/data.html
@@ -1,23 +1,44 @@
-<h2>About the data</h2>
+<section class="welcome">
+  <h2>Start Working With the Data</h2>
+  <p class="intro">Below you will find instructions on how to <a href="">access our API</a> as well as
+  download various sets of <a href="">raw CSV data</a>. Additional important information
+    about the sesnors is available. We hope you will get your hands dirty and work with the raw data by submitting a project to our <a href="http://datacanvas.org/sense-your-city/">challenge</a> by March 20, 2015.</p>
+</section>
 
-<p>For Sense Your City, we have deployed 14 environmental sensor nodes in 7 cities. Each node contains the same 5 sensors that measure air quality, dust, light, sound, temperature, and humidity, respectively. These sensors are low-cost and open source, and were assembled and installed in the residences and offices of generous citizens around the world. There are external factors that will influence the data in the diverse environments in which our nodes will live for the next several months, and from time to time sensors might go offline or break.</p>
+<section class="sensors">
+  <h2>About the data</h2>
+  <p>For Sense Your City, we have deployed 14 environmental sensor nodes in 7 cities. Each node contains the same 5 sensors that measure air quality, dust, light, sound, temperature, and humidity, respectively. These sensors are low-cost and open source, and were assembled and installed in the residences and offices of generous citizens around the world. There are external factors that will influence the data in the diverse environments in which our nodes will live for the next several months, and from time to time sensors might go offline or break.</p>
 
-<p>While exploring this data, please keep this in mind. This data does not reflect precise scientific measurements taken by industrial tools. Instead, this data consists of approximate values sensed by a do-it-yourself, urban environmental sensing system with hopes to compare and tell stories about various urban environments around the world. In many ways, this is an citizen science experiment to explore what can be achieved with readily available sensors, and to create information and art about our cities that is truly inclusive, universally scalable, and fun.</p>
+  <p>While exploring this data, please keep this in mind. This data does not reflect precise scientific measurements taken by industrial tools. Instead, this data consists of approximate values sensed by a do-it-yourself, urban environmental sensing system with hopes to compare and tell stories about various urban environments around the world. In many ways, this is an citizen science experiment to explore what can be achieved with readily available sensors, and to create information and art about our cities that is truly inclusive, universally scalable, and fun.</p>
 
-<ol>
-<li>The air quality sensor measures when harmful target gases are triggered and expresses their combined  concentration in raw voltage, resulting in qualitative air quality data. The output is raw voltage and the unit is mV. You can access the <a href="http://www.seeedstudio.com/wiki/images/e/eb/TP-401A_Indoor_Air_quality_gas_sensor.pdf">data sheet for the air quality sensor here</a>.</li>
+  <ol>
+  <li>The air quality sensor measures when harmful target gases are triggered and expresses their combined  concentration in raw voltage, resulting in qualitative air quality data. The output is raw voltage and the unit is mV. You can access the <a href="http://www.seeedstudio.com/wiki/images/e/eb/TP-401A_Indoor_Air_quality_gas_sensor.pdf">data sheet for the air quality sensor here</a>.</li>
 
-<li>The dust sensor measures the concentration of particulate matters (PM) above 1 micrometer in size,. This sensor has a detection range of of [0-28’000 pcs/liter]. This sensor tells us the concentration of particulate matter per liter of air and the unit is pcs/Liter. pcs stands for pieces, or simply particles. You can access the <a href="http://www.seeedstudio.com/wiki/images/4/4c/Grove_-_Dust_sensor.pdf">data sheet for the dust sensor here</a> (PDF).</li>
+  <li>The dust sensor measures the concentration of particulate matters (PM) above 1 micrometer in size. This sensor has a detection range of of [0-28’000 pcs/liter]. This sensor tells us the concentration of particulate matter per liter of air and the unit is pcs/Liter. pcs stands for pieces, or simply particles. You can access the <a href="http://www.seeedstudio.com/wiki/images/4/4c/Grove_-_Dust_sensor.pdf">data sheet for the dust sensor here</a> (PDF).</li>
 
-<li>The humidity sensor measures relative humidity (RH), which is expressed as percentage and calculates the current absolute humidity relative to the maximum for that temperature. This sensor can detect RH from 5 to 99% and operates within temperatures from minus 40 to 80 degree celsius. You can access the <a href="http://www.hoperf.cn/upload/sensor/TH02_V1.1.pdf">data sheet for the humidity sensor here</a> (PDF).</li>
+  <li>The humidity sensor measures relative humidity (RH), which is expressed as percentage and calculates the current absolute humidity relative to the maximum for that temperature. This sensor can detect RH from 5 to 99% and operates within temperatures from minus 40 to 80 degree celsius. You can access the <a href="http://www.hoperf.cn/upload/sensor/TH02_V1.1.pdf">data sheet for the humidity sensor here</a> (PDF).</li>
 
-<li>The light sensor measures illuminance, measured in lux. Illuminance is a measure of how much luminous flux is spread over a given area, while luminous flux is a measure of the total “amount” of visible light present. See details about <a href="http://en.wikipedia.org/wiki/Lux">comparative lux values on Wikipedia</a>. You can access the <a href="http://www.seeedstudio.com/wiki/images/d/de/TSL2561T.pdf">data sheet for the light sensor here</a> (PDF).</li>
+  <li>The light sensor measures illuminance, measured in lux. Illuminance is a measure of how much luminous flux is spread over a given area, while luminous flux is a measure of the total “amount” of visible light present. See details about <a href="http://en.wikipedia.org/wiki/Lux">comparative lux values on Wikipedia</a>. You can access the <a href="http://www.seeedstudio.com/wiki/images/d/de/TSL2561T.pdf">data sheet for the light sensor here</a> (PDF).</li>
 
-<li>The sound sensor measures the raw output voltage of the sensor based on soundwaves in the nearby environment in mV. It is not directly giving output in db or SPL. To roughly convert these measurements to decibel (dB), use the formula dB = 0.0158x + 49.184, where x is the value output by the sensor. You can access the <a href="http://garden.seeedstudio.com/images/a/ae/LM386.pdf">data sheet for the sound sensor here</a>.</li>
-</ol>
+  <li>The sound sensor measures the raw output voltage of the sensor based on soundwaves in the nearby environment in mV. It is not directly giving output in db or SPL. To roughly convert these measurements to decibel (dB), use the formula dB = 0.0158x + 49.184, where x is the value output by the sensor. You can access the <a href="http://garden.seeedstudio.com/images/a/ae/LM386.pdf">data sheet for the sound sensor here</a>.</li>
+  </ol>
 
-<p>For even more extensive information on each sensor contained in our nodes, browse through <a href="http://datacanvas.org/sense-your-city/">Data Canvas: Sense Your City</a>.</p>
+  <p>For even more extensive information on each sensor contained in our nodes, browse through <a href="http://datacanvas.org/sense-your-city/">Data Canvas: Sense Your City</a>.</p>
+</section>
 
-<p>The data from our sensor nodes will be opened on February 6, 2015, and we hope you will get your hands dirty and work with the raw data by submitting a project to our <a href="http://datacanvas.org/sense-your-city/">challenge</a> by March 20, 2015.</p>
+<section class="api">
+  <h2>API access</h2>
+  <p class="intro">The LocalData Sensors API, which drives the Sense Your City visualization site, lets you build you own live visualizations and mashups. This is the best way to access data if you plan to build a web application or a mobile app, if you want to acess specific intervals of raw data, or if you prefer JSON as your data format.</p>
 
-<div id="data-region"></div>
+  <a class="more">Click for more info on using the API.</a>
+
+  <div class="more"></div>
+</section>
+
+<section class="data">
+  <h2>Raw data</h2>
+  <p>Some copy about downloading all the data, a single metric across all sensors, a whole cities data, or an individual sensor. Each is downloadable as all the data, the last 7 days of data, and at two resolutions, every 10 seconds and every 20 min.</p>
+
+  <div id="data-region">
+  </div>
+</section>
