--- a/src/js/templates/sparklineContainer.html
+++ b/src/js/templates/sparklineContainer.html
@@ -1,6 +1,9 @@
 <h2><%= properties.name %></h2>
 <p>Averages over the last 24 hours and current real-time status.</p>
 
+<div class="sparklines">
+</div>
+
 <!--
 <% if (properties.type) { %>
 <a class="button" href="#!/<%= properties.type %>/<%= properties.name %>">
