--- a/src/js/templates/sparklineContainer.html
+++ b/src/js/templates/sparklineContainer.html
@@ -1,5 +1,5 @@
 <h2><%= properties.name %></h2>
-<p>Averages over the last 24 hours and current real-time status.</p>
+<p>Averages over the last 24 hours.</p>
 
 <div class="sparklines">
 </div>
