--- a/src/js/templates/sourceData.html
+++ b/src/js/templates/sourceData.html
@@ -1,18 +1,19 @@
-<div class="<%- _.camelCase(name) %>">
-  <h4 class="action-source-toggle">
-    <span class="action action-minimize start-hidden">
-      <i class="fa fa-minus-square-o"></i>
-    </span>
-    <span class="action action-maximize">
-      <i class="fa fa-plus-square-o"></i>
-    </span>
+<td>
+  <h3 class="action-source-toggle">
     <%= name %>
-  </h4>
+  </h3>
+</td>
 
-  <div class="source-data start-hidden">
-  <div class="api">id: <code><%= id %></code></div>
+<td>
+  <a class="button" href="http://localdata-sensors-beta.herokuapp.com/api/v1/aggregations.csv?type=sources&op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=2015-01-20T00%3A00%3A00Z&before=2015-01-27T00%3A00%3A00Z&resolution=6h&each.sources=<%= id %>"><i class="fa fa-table"></i> 10s</a>
+  <a class="button" href="http://localdata-sensors-beta.herokuapp.com/api/v1/aggregations.csv?type=sources&op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=2015-01-20T00%3A00%3A00Z&before=2015-01-27T00%3A00%3A00Z&resolution=6h&each.sources=<%= id %>"><i class="fa fa-table"></i> 20m</a>
+</td>
 
-  <a class="button" href="http://localdata-sensors-beta.herokuapp.com/api/v1/aggregations.csv?type=sources&op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=2015-01-20T00%3A00%3A00Z&before=2015-01-27T00%3A00%3A00Z&resolution=6h&each.sources=<%= id %>"><i class="fa fa-table"></i> CSV: Last week of data at 1 hour</a>
-  <a class="button" href="http://localdata-sensors-beta.herokuapp.com/api/v1/aggregations.csv?type=sources&op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=2015-01-20T00%3A00%3A00Z&before=2015-01-27T00%3A00%3A00Z&resolution=6h&each.sources=<%= id %>"><i class="fa fa-table"></i> CSV: Last month of data at 6 hours</a>
-  </div>
-</div>
+<td>
+  <a class="button" href="http://localdata-sensors-beta.herokuapp.com/api/v1/aggregations.csv?type=sources&op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=2015-01-20T00%3A00%3A00Z&before=2015-01-27T00%3A00%3A00Z&resolution=6h&each.sources=<%= id %>"><i class="fa fa-table"></i> 10s</a>
+  <a class="button" href="http://localdata-sensors-beta.herokuapp.com/api/v1/aggregations.csv?type=sources&op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=2015-01-20T00%3A00%3A00Z&before=2015-01-27T00%3A00%3A00Z&resolution=6h&each.sources=<%= id %>"><i class="fa fa-table"></i> 20m</a>
+</td>
+
+<td>
+  <code><%= id %></code>
+</td>
