--- a/src/css/sass/styles.scss
+++ b/src/css/sass/styles.scss
@@ -19,6 +19,7 @@
 @import "base";
 @import "components.scss";
 
+@import "icons.scss";
 @import "sparklines.scss";
 @import "toolbox.scss";
 @import "downloads.scss";
