--- a/src/js/templates/measure.html
+++ b/src/js/templates/measure.html
@@ -5,14 +5,14 @@
           <%= meta.name %>
           <% if(meta.description) { %>
           <span class="action action-show-info">
-            <i class="fa fa-info-circle"></i>
+            <i class="icon icon-info"></i>
           </span>
           <% } %>
           <span class="action action-minimize">
-            <i class="fa fa-minus-square-o"></i>
+            <i class="icon icon-minus"></i>
           </span>
           <span class="action action-maximize start-hidden">
-            <i class="fa fa-plus-square-o"></i>
+            <i class="icon icon-plus"></i>
           </span>
         </h3>
 
