--- a/src/js/templates/cityData.html
+++ b/src/js/templates/cityData.html
@@ -2,10 +2,10 @@
   <td>
     <h2 class="action-toggle">
       <span class="action action-minimize start-hidden">
-        <i class="fa fa-minus-square-o"></i>
+        <i class="icon icon-minus"></i>
       </span>
       <span class="action action-maximize">
-        <i class="fa fa-plus-square-o"></i>
+        <i class="icon icon-plus"></i>
       </span>
       <%= properties.name %>
     </h2>
