--- a/src/js/templates/data.html
+++ b/src/js/templates/data.html
@@ -10,7 +10,7 @@
   <p class="intro">For Sense Your City, we have deployed 14 environmental sensor nodes in 7 cities. Each node contains the same 5 sensors that measure air quality, dust, light, sound, temperature, and humidity. These sensors are low-cost and open source, and were assembled and installed in the residences and offices of generous citizens around the world.</p>
 
   <span class="action action-show-more">
-    <i class="fa fa-plus-square-o"></i> More important technical info about the sensors.
+    <i class="icon icon-plus"></i> More important technical info about the sensors.
   </span>
 
   <div class="more">
@@ -39,7 +39,7 @@
   <p class="intro">The LocalData Sensors API, which drives the Sense Your City visualization site, lets you build you own live visualizations and mashups. This is the best way to access data if you plan to build a web application or a mobile app, if you want to acess specific intervals of raw data, or if you prefer JSON as your data format.</p>
 
   <span class="action action-show-more">
-    <i class="fa fa-plus-square-o"></i> More information on using the API.</a>
+    <i class="icon icon-plus"></i> More information on using the API.</a>
   </span>
 
   <div class="more">--API Docs here--</div>
