--- a/src/js/templates/sourceData.html
+++ b/src/js/templates/sourceData.html
@@ -4,15 +4,16 @@
   </h3>
 </td>
 
-<td>
-  <a class="button" href="http://localdata-sensors-beta.herokuapp.com/api/v1/aggregations.csv?type=sources&op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=2015-01-20T00%3A00%3A00Z&before=2015-01-27T00%3A00%3A00Z&resolution=6h&each.sources=<%= id %>"><i class="fa fa-table"></i> 10s</a>
-  <a class="button" href="http://localdata-sensors-beta.herokuapp.com/api/v1/aggregations.csv?type=sources&op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=2015-01-20T00%3A00%3A00Z&before=2015-01-27T00%3A00%3A00Z&resolution=6h&each.sources=<%= id %>"><i class="fa fa-table"></i> 20m</a>
-</td>
 
 <td>
-  <a class="button" href="http://localdata-sensors-beta.herokuapp.com/api/v1/aggregations.csv?type=sources&op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=2015-01-20T00%3A00%3A00Z&before=2015-01-27T00%3A00%3A00Z&resolution=6h&each.sources=<%= id %>"><i class="fa fa-table"></i> 10s</a>
-  <a class="button" href="http://localdata-sensors-beta.herokuapp.com/api/v1/aggregations.csv?type=sources&op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=2015-01-20T00%3A00%3A00Z&before=2015-01-27T00%3A00%3A00Z&resolution=6h&each.sources=<%= id %>"><i class="fa fa-table"></i> 20m</a>
+  <a class="button" href="<%= properties.base %>aggregations.csv?op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=<%= properties.ranges.day.from %>&before=<%= properties.ranges.day.before %>&resolution=5m&each.sources=<%= id %>"><i class="fa fa-table"></i> 5m</a>
+  <a class="button" href="<%= properties.base %>aggregations.csv?op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=<%= properties.ranges.day.from %>&before=<%= properties.ranges.day.before %>&resolution=1h&each.sources=<%= id%>"><i class="fa fa-table"></i> 1h</a>
 </td>
+<td>
+  <a class="button" href="<%= properties.base %>aggregations.csv?op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=<%= properties.ranges.week.from %>&before=<%= properties.ranges.week.before %>&resolution=1h&each.sources=<%= id %>"><i class="fa fa-table"></i> 1h</a>
+  <a class="button" href="<%= properties.base %>aggregations.csv?op=mean&fields=temperature%2Clight%2Cairquality_raw%2Csound%2Chumidity%2Cdust&from=<%= properties.ranges.week.from %>&before=<%= properties.ranges.week.before %>&resolution=6h&each.sources=<%= id %>"><i class="fa fa-table"></i> 6h</a>
+</td>
+
 
 <td>
   <code><%= id %></code>
