--- a/src/js/templates/source.html
+++ b/src/js/templates/source.html
@@ -9,4 +9,6 @@
 </div>
 
 <div id="tools-region"></div>
-<div id="graphs-region"></div>
+<div id="graphs-region">
+  <div class="spinner"></div>
+</div>
