--- a/src/css/sass/base.scss
+++ b/src/css/sass/base.scss
@@ -183,3 +183,38 @@ a:active,
   display: none;
 }
 
+.spinner {
+  width: 40px;
+  height: 40px;
+  margin: 10px auto 50px auto;
+  background-color: #333;
+
+  border-radius: 100%;
+  -webkit-animation: scaleout 1.0s infinite ease-in-out;
+  animation: scaleout 1.0s infinite ease-in-out;
+}
+
+.spinner-small {
+  height: 15px;
+  width: 15px;
+  margin: 0px auto;
+}
+
+@-webkit-keyframes scaleout {
+  0% { -webkit-transform: scale(0.0) }
+  100% {
+    -webkit-transform: scale(1.0);
+    opacity: 0;
+  }
+}
+
+@keyframes scaleout {
+  0% {
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 100% {
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+    opacity: 0;
+  }
+}
