--- a/src/js/templates/city.html
+++ b/src/js/templates/city.html
@@ -7,4 +7,6 @@
 </div>
 
 <div id="tools-region"></div>
-<div id="graphs-region"></div>
+<div id="graphs-region">
+  <div class="spinner"></div>
+</div>
