--- a/src/js/templates/home.html
+++ b/src/js/templates/home.html
@@ -4,4 +4,6 @@
 </div>
 
 <div id="tools-region"></div>
-<div id="graphs-region"></div>
+<div id="graphs-region">
+  <div class="spinner"></div>
+</div>
