--- a/src/js/templates/sparkline.html
+++ b/src/js/templates/sparkline.html
@@ -3,6 +3,11 @@
   <div class="measure-graph ct-chart"></div>
 </div>
 <h3 class="value">
+  <!--
+  <% if(meta.loading === true) { %>
+    <div class="spinner spinner-small"></div>
+  <% } else { }%>
+  -->
   <%= values[0].data[values[0].data.length -1] %>
   <span class="unit"><%= meta.units %></span>
 </h3>
