--- a/src/css/sass/icons.scss
+++ b/src/css/sass/icons.scss
@@ -16,3 +16,11 @@
 .icon.icon-plus {
   background: transparent url(../img/icons/plus.svg) no-repeat center 3px;
 }
+
+.icon.icon-right {
+  background: transparent url(../img/icons/right.svg) no-repeat center 3px;
+}
+
+.icon.icon-left {
+  background: transparent url(../img/icons/left.svg) no-repeat center 3px;
+}
