--- a/src/js/templates/measure.html
+++ b/src/js/templates/measure.html
@@ -8,6 +8,9 @@
             <i class="icon icon-info"></i>
           </span>
           <% } %>
+
+          <div class="spinner spinner-small start-hidden"></div>
+
           <span class="action action-minimize">
             <i class="icon icon-minus"></i>
           </span>
@@ -22,10 +25,14 @@
         </div>
       </div>
     </div>
-    <div class="pure-u-1">
+    <div class="pure-u-1 graph-container">
+      <div class="action action-time graph-back">
+        <i class="icon icon-left"></i>
+      </div>
+      <div class="action action-time graph-forward">
+        <i class="icon icon-right"></i>
+      </div>
       <div class="measure-graph ct-chart">
-        <div class="action action-time graph-back"><i class="fa fa-angle-left"></i></div>
-        <div class="action action-time graph-forward"><i class="fa fa-angle-right"></i></div>
       </div>
     </div>
 </div>
