--- a/src/css/sass/base.scss
+++ b/src/css/sass/base.scss
@@ -178,11 +178,6 @@ a:active,
   }
 }
 
-.start-hidden,
-.print {
-  display: none;
-}
-
 .spinner {
   width: 40px;
   height: 40px;
@@ -195,9 +190,11 @@ a:active,
 }
 
 .spinner-small {
-  height: 15px;
-  width: 15px;
-  margin: 0px auto;
+  background-color: $primary-color;
+  height: 23px;
+  width: 23px;
+  margin: 0;
+  display: inline-block;
 }
 
 @-webkit-keyframes scaleout {
@@ -218,3 +215,9 @@ a:active,
     opacity: 0;
   }
 }
+
+.start-hidden,
+.print {
+  display: none;
+}
+
