Add world data link

--- a/src/js/templates/data.html
+++ b/src/js/templates/data.html
@@ -285,7 +285,8 @@
   <h2>Raw data</h2>
   <p>You can download aggregated data in CSV format for every sensor and city. Data
   is avalable for the last day and week, at 5 minute, 1 hour, and 6 hour resolutions.
-  You can also use city and source IDs with the Sensors API to access data in many different formats.</p>
+  You can also use city and source IDs with the Sensors API to access data in many different formats. You can also access a <a href="https://s3.amazonaws.com/localdata-export/datacanvas/full.zip`
+">bulk download of all data</a> from all sensors in CSV format.</p>
 
   <div id="data-region">
   </div>
