--- a/src/js/templates/data.html
+++ b/src/js/templates/data.html
@@ -286,7 +286,7 @@
   <p>You can download aggregated data in CSV format for every sensor and city. Data
   is avalable for the last day and week, at 5 minute, 1 hour, and 6 hour resolutions.
   You can also use city and source IDs with the Sensors API to access data in many different formats. You can also access a <a href="https://s3.amazonaws.com/localdata-export/datacanvas/full.zip`
-">bulk download of all data</a> from all sensors in CSV format.</p>
+">bulk download of all data (100MB+ zipped)</a> from all sensors in CSV format.</p>
 
   <div id="data-region">
   </div>
