--- a/src/css/sass/base.scss
+++ b/src/css/sass/base.scss
@@ -161,7 +161,7 @@ a:active,
   }
 
   @media only screen
-  and (max-width : 768px) {
+  and (max-width : $max-width) {
     margin: 0;
     height: 300px;
   }
