--- a/src/js/templates/source.html
+++ b/src/js/templates/source.html
@@ -1,5 +1,5 @@
 <div class="overview">
-  <div class="avatar" style="<% if(properties.avatar) { %>background: #fff url(<%=properties.avatar %>) no-repeat center center; background-size: auto 80%<% } %>"></div>
+  <div class="avatar" style="<% if(properties.avatar) { %>background: #fff url(<%=properties.avatar %>) no-repeat center center; background-size: 80% auto<% } %>"></div>
   <div class="crumbs">
     <a href="#!/">World view</a>:
     <a href="#!/cities/<%= properties.city %>"><%= properties.city %></a>
