Add white plus icon and fix issue where measure graph could stop popup from opening

--- a/src/css/sass/icons.scss
+++ b/src/css/sass/icons.scss
@@ -17,6 +17,11 @@
   background: transparent url(../img/icons/plus.svg) no-repeat center 3px;
 }
 
+.icon.icon-plus.icon-white {
+  background: transparent url(../img/icons/plus-white.svg) no-repeat center 3px;
+}
+
+
 .icon.icon-right {
   background: transparent url(../img/icons/right.svg) no-repeat center 3px;
 }
