Fix a typo in the challenge blurb

--- a/src/js/templates/data.html
+++ b/src/js/templates/data.html
@@ -1,7 +1,7 @@
 <section class="welcome">
   <h2>Start Working With the Data</h2>
 
-  <p class="intro">Please read additional important information about the data. We hope you will get your hands dirty and work with the daw data by summating a project to our <a href="datacanvas.org/sense-your-city ">challenge</a> by March 20, 2015. Below, you will find instructions on how to access our API as well as download various sets of raw CSV data.</p>
+  <p class="intro">Please read additional important information about the data. We hope you will get your hands dirty and work with the daw data by submitting a project to our <a href="datacanvas.org/sense-your-city ">challenge</a> by March 20, 2015. Below, you will find instructions on how to access our API as well as download various sets of raw CSV data.</p>
 </section>
 
 <section class="sensors">
