Remove some comments, change API +text, skip every other label

--- a/src/js/templates/data.html
+++ b/src/js/templates/data.html
@@ -39,7 +39,7 @@
   <p class="intro">The LocalData Sensors API, which drives the Sense Your City visualization site, lets you build you own live visualizations and mashups. This is the best way to access data if you plan to build a web application or a mobile app, if you want to acess specific intervals of raw data, or if you prefer JSON as your data format.</p>
 
   <span class="action action-show-more">
-    <i class="icon icon-white icon-plus"></i> More information on using the API.</a>
+    <i class="icon icon-white icon-plus"></i> Complete API documentation.</a>
   </span>
 
   <div class="more">
